--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,4 +13,8 @@ python:
 
 sphinx:
   configuration: docs/source/conf.py
-  fail_on_warning: true
+  # fail_on_warning: true
+
+formats:
+  - pdf
+  - epub
